--- a/index_.html
+++ b/index_.html
@@ -32,7 +32,7 @@ De la misma manera la gente en la página web nos puede <b>vender libros a cambi
 Así nosotros tendremos la capacidad de poder poner nuevas máquinas en más pueblos y tratar de llegar al máximo de pueblos posibles.
 Para poder alquilar el libro la gente deberá de darse de alta en la página para que en el momento en el que alquila un libro tengamos sus datos por si se le pasa la fecha de entrega del libro o demás. <A href="https://www.clarin.com/cultura/iniciativa-salvar-libros-venden-destruccion_0_BwDWsUMya.html" target="_blank"> Idea para salvar los libros </A></p>
 				</div>
-                <img src="libreria.jpg"  />
+                <img src="./assets/img/libreria.jpg"  />
 
                 <header>
 					<h1>Donde estamos</h1>
@@ -40,13 +40,13 @@ Para poder alquilar el libro la gente deberá de darse de alta en la página par
                 <div class="content">
 					<p>El centro donde nos encontramos se llama <b>cuatrovientos</b> y nos encontramos en la localidad de <b>Pamplona</b>. Tenemos maquinas de libros por gran parte de españa. <A href="http://www.cuatrovientos.org/" target="_blank"> Centro cuatrovientos </A></p>
 				</div>
-                <img src="4vientos.jpg" />
+                <img src="./assets/img4vientos.jpg" />
 
                 <header>
 					<h1>Libros que tenemos</h1>
 				</header>
                 <div class="content">
-					<p>Tenemos una gran <b>variedad de libros</b> disponibles. Tenemos distintos estilos literarios y tambien tenemos libros para todo tipo de edades y de publicos. <A  href="https://es.wikipedia.org/wiki/Anexo:Los_100_mejores_libros_de_todos_los_tiempos,_seg%C3%BAn_el_Club_de_Libros_de_Noruega" target="_blank"><img src="libros.jpg" /> Listado de libros </A></p>				
+					<p>Tenemos una gran <b>variedad de libros</b> disponibles. Tenemos distintos estilos literarios y tambien tenemos libros para todo tipo de edades y de publicos. <A  href="https://es.wikipedia.org/wiki/Anexo:Los_100_mejores_libros_de_todos_los_tiempos,_seg%C3%BAn_el_Club_de_Libros_de_Noruega" target="_blank"><img src="./assets/img/libros.jpg" /> Listado de libros </A></p>				
 				</div>
 
 			</article> 
