--- a/index_.html
+++ b/index_.html
@@ -40,7 +40,7 @@ Para poder alquilar el libro la gente deberá de darse de alta en la página par
                 <div class="content">
 					<p>El centro donde nos encontramos se llama <b>cuatrovientos</b> y nos encontramos en la localidad de <b>Pamplona</b>. Tenemos maquinas de libros por gran parte de españa. <A href="http://www.cuatrovientos.org/" target="_blank"> Centro cuatrovientos </A></p>
 				</div>
-                <img src="./assets/img4vientos.jpg" />
+                <img src="./assets/img/4vientos.jpg" />
 
                 <header>
 					<h1>Libros que tenemos</h1>
