--- a/index_.html
+++ b/index_.html
@@ -13,10 +13,10 @@
 			</a>
 			<nav>
 				<ul>
-					<li><a href="index_.php">Inicio</a></li>
+					<li><a href="index_.html">Inicio</a></li>
 					<li><a href="#">Lugares</a></li>
-                    <li><a href="#">Libros</a></li>
-					<li><a href="#">Log in</a></li>
+                    			<li><a href="#">Libros</a></li>
+					<li><a href="contacto.html">Log in</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -52,7 +52,7 @@ Para poder alquilar el libro la gente deberá de darse de alta en la página par
 			</article> 
 		</section>
 		<footer id="main-footer">
-			<form method="link" action="index_.php">
+			<form method="link" action="index_.html">
 				<input type="submit" value="Inicio" id="button1">
 			</form>
 			<p>&copy; 2022 - Unai Llano</p>
