--- a/index_.html
+++ b/index_.html
@@ -14,8 +14,8 @@
 			<nav>
 				<ul>
 					<li><a href="index_.html">Inicio</a></li>
-					<li><a href="#">Lugares</a></li>
-                    			<li><a href="#">Libros</a></li>
+					<li><a href="lugares.html">Lugares</a></li>
+                    			<li><a href="libros.html">Libros</a></li>
 					<li><a href="contacto.html">Log in</a></li>
 				</ul>
 			</nav>
