--- a/libros.html
+++ b/libros.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 	</head>
 	<body>
-		<link rel="stylesheet" href="estilo_index.css">
+		<link rel="stylesheet" href="./assets/css/estilo_index.css">
 
 		<header id="main-header">
 			<a id="logo-header" href="#">
