--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Salvar los libros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"  crossorigin="anonymous">
-    <link rel="stylesheet" href="estilo_index.css">
+    <link rel="stylesheet" href="./assets/css/estilo_index.css">
 
 </head>
 
