--- a/index_.html
+++ b/index_.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Salvar los libros</title>
-		<link rel="stylesheet" href="./assets/css/estilo_index.css">
+		<link rel="stylesheet" href="/assets/css/estilo_index.css">
 	</head>
 
 	<body>
